"""empty message

Revision ID: 808bc8b679c8
Revises: 
Create Date: 2023-09-07 17:54:28.905423

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '808bc8b679c8'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('administradores',
    sa.Column('_Administrador__id', sa.Integer(), nullable=False),
    sa.Column('codigo', sa.String(length=255), nullable=True),
    sa.Column('nombre', sa.String(length=255), nullable=True),
    sa.Column('puesto', sa.String(length=255), nullable=True),
    sa.PrimaryKeyConstraint('_Administrador__id')
    )
    op.create_table('cabana',
    sa.Column('_Cabana__id', sa.Integer(), nullable=False),
    sa.Column('capacidad', sa.String(length=255), nullable=True),
    sa.Column('tipo', sa.String(length=255), nullable=True),
    sa.Column('nivel', sa.String(length=255), nullable=True),
    sa.Column('codigo', sa.String(length=255), nullable=True),
    sa.PrimaryKeyConstraint('_Cabana__id')
    )
    op.create_table('clientes',
    sa.Column('_Cliente__id', sa.Integer(), nullable=False),
    sa.Column('nombre', sa.String(length=255), nullable=True),
    sa.Column('codigo', sa.String(length=255), nullable=True),
    sa.Column('email', sa.String(length=255), nullable=True),
    sa.Column('telefono', sa.String(length=255), nullable=True),
    sa.Column('ciudad', sa.String(length=255), nullable=True),
    sa.PrimaryKeyConstraint('_Cliente__id')
    )
    op.create_table('proveedor',
    sa.Column('_Proveedor__id', sa.Integer(), nullable=False),
    sa.Column('nombre', sa.String(length=255), nullable=True),
    sa.Column('codigo', sa.String(length=255), nullable=True),
    sa.Column('cuit', sa.String(length=255), nullable=True),
    sa.Column('telefono', sa.String(length=255), nullable=True),
    sa.Column('email', sa.String(length=255), nullable=True),
    sa.Column('insumo', sa.String(length=255), nullable=True),
    sa.PrimaryKeyConstraint('_Proveedor__id')
    )
    op.create_table('reservas',
    sa.Column('_Reserva__id', sa.Integer(), nullable=False),
    sa.Column('codigo', sa.String(length=255), nullable=True),
    sa.Column('fecha_inicio', sa.String(length=255), nullable=True),
    sa.Column('fecha_fin', sa.String(length=255), nullable=True),
    sa.Column('num_cabana', sa.String(length=255), nullable=True),
    sa.Column('codigo_cliente', sa.String(length=255), nullable=True),
    sa.PrimaryKeyConstraint('_Reserva__id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('reservas')
    op.drop_table('proveedor')
    op.drop_table('clientes')
    op.drop_table('cabana')
    op.drop_table('administradores')
    # ### end Alembic commands ###
